fix collapse nav 20

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -117,7 +117,6 @@
 }
 
 .button-collapse {
-    position: absolute;
-    right: 0;
+
 }
 
